--- a/Templates/index.html
+++ b/Templates/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en"><!-- InstanceBegin template="/Templates/template.dwt" codeOutsideHTMLIsLocked="false" -->
+<html lang="en"><!-- InstanceBegin template="/Templates/master-template.dwt" codeOutsideHTMLIsLocked="false" -->
   <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
@@ -15,7 +15,10 @@
   </head>
   <body>
     <div class= "container">
-		<h1>Unsplash Photographer Spotlight</h1>
+      <!-- InstanceBeginEditable name="edit-page-title" --><h1>Unsplash Photography</h1>
+		
+		<!-- InstanceEndEditable -->
+		
 		<p>Welcome to my Unsplash page. Below I have selected six photographers whose photos resonate with me. Learn all about Islam with my page.</p>
       <!-- InstanceBeginEditable name="Content" -->
    
