--- a/Templates/index.html
+++ b/Templates/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html lang="en"><!-- InstanceBegin template="/Templates/master-template.dwt" codeOutsideHTMLIsLocked="false" -->
+<html lang="en">
+  <!-- InstanceBegin template="/Templates/master-template.dwt" codeOutsideHTMLIsLocked="false" -->
   <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
@@ -15,73 +16,72 @@
   </head>
   <body>
     <div class= "container">
-      <!-- InstanceBeginEditable name="edit-page-title" --><h1>Unsplash Photography</h1>
-		
-		<!-- InstanceEndEditable -->
-		
-		<p>Welcome to my Unsplash page. Below I have selected six photographers whose photos resonate with me. Learn all about Islam with my page.</p>
-      <!-- InstanceBeginEditable name="Content" -->
-   
-    <div class="card-deck">
-      <div class="card">
-        <img class="card-img-top" src="https://images.unsplash.com/photo-1515091943-9d5c0ad475af?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">Raghu Nayyar</h5>
-          <p class="card-text">Designer, Programmer based out of Stockholm. I travel a lot, I click a lot.
-            I am @raghunayyar on Instagram.</p>
-			<a href="https://unsplash.com/@raghunayyar">Photo Gallery</a>
+      <!-- InstanceBeginEditable name="edit-page-title" -->
+      <h1>Unsplash Photography</h1>
+      <div class="row">
+        <div class="col-3 col-md-2 col-lg-1">
+          <img src="Images/savannah-vizzerra.jpg" alt="Savannah Vizzerra" class="img-fluid rounded-circle"/>
+        </div>
+        <div class="col-9 col-md-10 col-lg-11">
+          <p>Welcome to my Unsplash Photographer Spotlight. Below I have selected six photographers whose work has inspired me. I selected ten pictures from each photographers Unspalsh page and provided some commentary. Click on any photographer to start. </p>
         </div>
       </div>
-		<div class="card">
-      <img class="card-img-top" src="https://images.unsplash.com/photo-1526697298613-08e9ea0b2327?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Ghadeer</h5>
-        <p class="card-text">Relax = ✈️ 📷</p>
-        <a href="https://unsplash.com/@izohal94">Photo Gallery</a>
-      </div>
-    </div>
-    <div class="card">
-      <img class="card-img-top" src="https://images.unsplash.com/photo-1513072064285-240f87fa81e8?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Izuddin Helmi Adnan</h5>
-        <p class="card-text">These are my phone wallpaper collection that I captured from my country. Most of my shots are from the drone. You can follow me on instagram : https://www.instagram.com/izuddinhelmi.</p>
-		  <a href="https://unsplash.com/@izuddinhelmi">Photo Gallery</a>
-      </div>
-    </div>
-		</div>
-    
-    
-    
-    <div class="card-deck">
-      <div class="card">
-        <img class="card-img-top" src="https://images.unsplash.com/photo-1526677504211-233c8477c61b?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">David Monje</h5>
-          <p class="card-text">Studying a degree of Audiovisual and Multimedia. Instagram: @david.monje</p>
-			<a href="https://unsplash.com/@davidmonje">Photo Gallery</a>
+      <!-- InstanceEndEditable --> <!-- InstanceBeginEditable name="Content" -->
+      <div class="card-deck">
+        <div class="card">
+          <img class="card-img-top" src="https://images.unsplash.com/photo-1515091943-9d5c0ad475af?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Raghu Nayyar</h5>
+            <p class="card-text">Designer, Programmer based out of Stockholm. I travel a lot, I click a lot.
+              I am @raghunayyar on Instagram.</p>
+            <a href="https://unsplash.com/@raghunayyar">Photo Gallery</a>
+          </div>
+        </div>
+        <div class="card">
+          <img class="card-img-top" src="https://images.unsplash.com/photo-1526697298613-08e9ea0b2327?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Ghadeer</h5>
+            <p class="card-text">Relax = ✈️ 📷</p>
+            <a href="https://unsplash.com/@izohal94">Photo Gallery</a>
+          </div>
+        </div>
+        <div class="card">
+          <img class="card-img-top" src="https://images.unsplash.com/photo-1513072064285-240f87fa81e8?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Izuddin Helmi Adnan</h5>
+            <p class="card-text">These are my phone wallpaper collection that I captured from my country. Most of my shots are from the drone. You can follow me on instagram : https://www.instagram.com/izuddinhelmi.</p>
+            <a href="https://unsplash.com/@izuddinhelmi">Photo Gallery</a>
+          </div>
         </div>
       </div>
-      <div class="card">
-        <img class="card-img-top" src="https://images.unsplash.com/photo-1415381266596-3975189f3277?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">Emma Van Sant</h5>
-          <p class="card-text">Download free, beautiful high-quality photos curated by Emma.</p>
-			<a href="https://unsplash.com/@emma">Photo Gallery</a>
+      <div class="card-deck">
+        <div class="card">
+          <img class="card-img-top" src="https://images.unsplash.com/photo-1526677504211-233c8477c61b?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">David Monje</h5>
+            <p class="card-text">Studying a degree of Audiovisual and Multimedia. Instagram: @david.monje</p>
+            <a href="https://unsplash.com/@davidmonje">Photo Gallery</a>
+          </div>
+        </div>
+        <div class="card">
+          <img class="card-img-top" src="https://images.unsplash.com/photo-1415381266596-3975189f3277?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Emma Van Sant</h5>
+            <p class="card-text">Download free, beautiful high-quality photos curated by Emma.</p>
+            <a href="https://unsplash.com/@emma">Photo Gallery</a>
+          </div>
+        </div>
+        <div class="card">
+          <img class="card-img-top" src="https://images.unsplash.com/photo-1513348442789-deb89ee21d26?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">أخٌ في الله </h5>
+            <p class="card-text">Download free, beautiful high-quality photos curated by أخٌ في الله.</p>
+            <a href=" https://unsplash.com/@mhrezaa">Photo Gallery</a>
+          </div>
         </div>
       </div>
-    <div class="card">
-      <img class="card-img-top" src="https://images.unsplash.com/photo-1513348442789-deb89ee21d26?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">أخٌ في الله </h5>
-        <p class="card-text">Download free, beautiful high-quality photos curated by أخٌ في الله.</p>
-		  <a href=" https://unsplash.com/@mhrezaa">Photo Gallery</a>
-      </div>
-    </div>
-	  </div>
-    
-    
-    <footer>[footer]</footer>
-    <!-- InstanceEndEditable -->
+      <footer>[footer]</footer>
+      <!-- InstanceEndEditable -->
     </div>
     
     <!-- Optional JavaScript --> 
@@ -90,4 +90,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script> 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
-<!-- InstanceEnd --></html>
+  <!-- InstanceEnd -->
+</html>
