--- a/Templates/index.html
+++ b/Templates/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
-<html lang="en">
-  <!-- InstanceBegin template="/Templates/master-template.dwt" codeOutsideHTMLIsLocked="false" -->
+<html lang="en"><!-- InstanceBegin template="/Templates/master-template.dwt" codeOutsideHTMLIsLocked="false" -->
   <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
@@ -16,8 +15,8 @@
   </head>
   <body>
     <div class= "container">
-      <!-- InstanceBeginEditable name="edit-page-title" -->
       <h1>Unsplash Photography</h1>
+      <!-- InstanceBeginEditable name="master-Content" -->
       <div class="row">
         <div class="col-3 col-md-2 col-lg-1">
           <img src="Images/savannah-vizzerra.jpg" alt="Savannah Vizzerra" class="img-fluid rounded-circle"/>
@@ -26,15 +25,14 @@
           <p>Welcome to my Unsplash Photographer Spotlight. Below I have selected six photographers whose work has inspired me. I selected ten pictures from each photographers Unspalsh page and provided some commentary. Click on any photographer to start. </p>
         </div>
       </div>
-      <!-- InstanceEndEditable --> <!-- InstanceBeginEditable name="Content" -->
-      <div class="card-deck">
+		<div class="card-deck">
         <div class="card">
           <img class="card-img-top" src="https://images.unsplash.com/photo-1515091943-9d5c0ad475af?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Raghu Nayyar</h5>
             <p class="card-text">Designer, Programmer based out of Stockholm. I travel a lot, I click a lot.
               I am @raghunayyar on Instagram.</p>
-            <a href="https://unsplash.com/@raghunayyar">Photo Gallery</a>
+            <a href="file:///Users/savannahvizzerra/Desktop/final-unsplash-project/raghu-nayyar/index.html">Photo Gallery</a>
           </div>
         </div>
         <div class="card">
@@ -80,8 +78,23 @@
           </div>
         </div>
       </div>
-      <footer>[footer]</footer>
+      
       <!-- InstanceEndEditable -->
+      <div class="row">
+        <div class="col-12 col-sm-6">
+          Made with [love] and [coffee] by Savannah Vizzerra
+        </div>
+        <div class="col-12 col-sm-6">
+          Connect with me: []
+			<a href="https://www.linkedin.com/in/savannahnvizzerra/" target="_blank">LinkedIn</a>
+			
+			<a href="https://www.facebook.com/savannah.vizzerra" target="_blank">Facebook</a>
+			
+			<a href="https://www.instagram.com/savannahvizzerra/?hl=en" target="_blank">Instagram</a>
+			
+			<a href="https://github.com/SavannahVizzerra1" target="_blank">Github</a>
+        </div>
+      </div>
     </div>
     
     <!-- Optional JavaScript --> 
@@ -90,5 +103,4 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script> 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
-  <!-- InstanceEnd -->
-</html>
+<!-- InstanceEnd --></html>
