created my ghaeer template

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -15,7 +15,8 @@
   </head>
   <body>
     <div class= "container">
-      <h1>Unsplash Photography</h1>
+      <!-- InstanceBeginEditable name="edit-title" --><h1>Unsplash Photography</h1><!-- InstanceEndEditable -->
+      
       <!-- InstanceBeginEditable name="master-Content" -->
       <div class="row">
         <div class="col-3 col-md-2 col-lg-1">
@@ -27,7 +28,7 @@
       </div>
 		<div class="card-deck">
         <div class="card">
-          <img class="card-img-top" src="https://images.unsplash.com/photo-1515091943-9d5c0ad475af?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
+          <img class="card-img-top" src="https://images.unsplash.com/profile-1495391929558-64f9b42830c9?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Raghu Nayyar</h5>
             <p class="card-text">Designer, Programmer based out of Stockholm. I travel a lot, I click a lot.
@@ -36,15 +37,15 @@
           </div>
         </div>
         <div class="card">
-          <img class="card-img-top" src="https://images.unsplash.com/photo-1526697298613-08e9ea0b2327?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
+          <img class="card-img-top" src="https://images.unsplash.com/profile-1532066445973-34348a9af47c?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Ghadeer</h5>
             <p class="card-text">Relax = ✈️ 📷</p>
-            <a href="https://unsplash.com/@izohal94">Photo Gallery</a>
+            <a href="../Ghadeer/index.html">Photo Gallery</a>
           </div>
         </div>
         <div class="card">
-          <img class="card-img-top" src="https://images.unsplash.com/photo-1513072064285-240f87fa81e8?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
+          <img class="card-img-top" src="https://images.unsplash.com/profile-1508063960004-c2f18dad9a5d?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Izuddin Helmi Adnan</h5>
             <p class="card-text">These are my phone wallpaper collection that I captured from my country. Most of my shots are from the drone. You can follow me on instagram : https://www.instagram.com/izuddinhelmi.</p>
@@ -54,7 +55,7 @@
       </div>
       <div class="card-deck">
         <div class="card">
-          <img class="card-img-top" src="https://images.unsplash.com/photo-1526677504211-233c8477c61b?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
+          <img class="card-img-top" src="https://images.unsplash.com/profile-1529104514331-4b8315f67579?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">David Monje</h5>
             <p class="card-text">Studying a degree of Audiovisual and Multimedia. Instagram: @david.monje</p>
@@ -62,7 +63,7 @@
           </div>
         </div>
         <div class="card">
-          <img class="card-img-top" src="https://images.unsplash.com/photo-1415381266596-3975189f3277?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
+          <img class="card-img-top" src="https://images.unsplash.com/profile-1518024517880-d5107117378b?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Emma Van Sant</h5>
             <p class="card-text">Download free, beautiful high-quality photos curated by Emma.</p>
@@ -70,7 +71,7 @@
           </div>
         </div>
         <div class="card">
-          <img class="card-img-top" src="https://images.unsplash.com/photo-1513348442789-deb89ee21d26?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
+          <img class="card-img-top" src="https://images.unsplash.com/profile-1538975456889-9488a82c5ece?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">أخٌ في الله </h5>
             <p class="card-text">Download free, beautiful high-quality photos curated by أخٌ في الله.</p>
