added izuddin-adnan-index page

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -49,7 +49,7 @@
           <div class="card-body">
             <h5 class="card-title">Izuddin Helmi Adnan</h5>
             <p class="card-text">These are my phone wallpaper collection that I captured from my country. Most of my shots are from the drone. You can follow me on instagram : https://www.instagram.com/izuddinhelmi.</p>
-            <a href="https://unsplash.com/@izuddinhelmi">Photo Gallery</a>
+            <a href="file:///Users/savannahvizzerra/Desktop/final-unsplash-project/izuddin-helmi-adnan/index.html">Photo Gallery</a>
           </div>
         </div>
       </div>
