--- a/Templates/index.html
+++ b/Templates/index.html
@@ -59,7 +59,7 @@
           <div class="card-body">
             <h5 class="card-title">David Monje</h5>
             <p class="card-text">Studying a degree of Audiovisual and Multimedia. Instagram: @david.monje</p>
-            <a href="https://unsplash.com/@davidmonje">Photo Gallery</a>
+            <a href="file:///Users/savannahvizzerra/Desktop/final-unsplash-project/David%20Monje/index.html">Photo Gallery</a>
           </div>
         </div>
         <div class="card">
