--- a/Templates/index.html
+++ b/Templates/index.html
@@ -67,7 +67,7 @@
           <div class="card-body">
             <h5 class="card-title">Emma Van Sant</h5>
             <p class="card-text">Download free, beautiful high-quality photos curated by Emma.</p>
-            <a href="https://unsplash.com/@emma">Photo Gallery</a>
+            <a href="file:///Users/savannahvizzerra/Desktop/final-unsplash-project/emma-van-sant/index.html">Photo Gallery</a>
           </div>
         </div>
         <div class="card">
