added lil-ninos-detail-01 plus changed some M.H. Rezza's name since the Arabic version was throwing the format off

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -73,9 +73,9 @@
         <div class="card">
           <img class="card-img-top" src="https://images.unsplash.com/profile-1538975456889-9488a82c5ece?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title">أخٌ في الله </h5>
+            <h5 class="card-title">M.H. Rezza </h5>
             <p class="card-text">Download free, beautiful high-quality photos curated by أخٌ في الله.</p>
-            <a href="https://unsplash.com/@mhrezaa">Photo Gallery</a>
+            <a href="file:///Users/savannahvizzerra/Desktop/final-unsplash-project/M.H.%20Rezza/index.html">Photo Gallery</a>
           </div>
         </div>
       </div>
