--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,3 +11,27 @@ h1, h5, h3 {font-family: 'Source Sans Pro', serif;}
 a {
 	color: #25333A;
 }
+
+a:hover {
+	color: #409aa9;
+	text-decoration: none;
+}
+
+.btn-primary {
+	color: #fff;
+	background-color: #25333a;
+	border-color: #25333a;
+	font-weight: 100;
+}
+.btn-primary:hover {
+	background-color: #409aa9;
+	border-color: #409aa9;
+}
+
+.unsplash-header {
+	background-color: #25333a;
+	padding-top: 1em;
+	padding-bottom: 1em;
+	margin: 0;
+	color: #ffffff;
+}
