added icons to photographer list

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,23 @@
 /*
 
 
+.unsplash-navigation .breadcrumb {
+	background-color: #409aa9;
+	margin: 0;
+	color: #ffffff;
+}
+.unsplash-navigation .breadcrumb li, .unsplash-navigation .breadcrumb a, .unsplash-navigation .breadcrumb a:hover {
+	color: #ffffff;
+	text-decoration: none;
+}
+.unsplash-navigation .breadcrumb li.active {
+	color: #25333a;
+	font-weight: 400;
+}
+.breadcrumb-item+.breadcrumb-item::before {
+	color: #ffffff;
+}
+
 
 
 */
@@ -65,10 +82,20 @@ a:hover {
 	font-size: 2em;
 	margin-left: .25em;
 }
-
 .unsplash-home-page-intro {
 	background-color: #409aa9;
 	padding:3em 0;
 	color: #ffffff;
 	margin-bottom: 2em;
 }
+
+
+
+.unsplash-navigation {
+	background-color: #409aa9;
+	padding-top: .5em;
+	padding-bottom: .5em;
+	margin: 0;
+	margin-bottom: 2em;
+}
+
